<resources>
    <string name="app_name">mTracApp</string>
    <string name="err_msg_apt_opd_new_label">Please enter OPD New Attendees</string>
    <string name="err_msg_ipt_eligible_children_adolescent_art">
        Please enter IPT eligible children/adolescent ART clients
    </string>
    <string name="err_msg_ipt_eligible_adult_art">
        Please enter IPT eligible adult ART clients
    </string>
    <string name="err_msg_no_of_samples_tested">
        Please enter No. of samples tested
    </string>
    <string name="err_msg_clients_screened">
        Please enter clients Screened
    </string>
    <string name="err_msg_presumptive_tb_cases_identified">
        Please enter Presumptive TB cases identified
    </string>
    <string name="err_msg_new_relapse_diagnosed_registered">
        Please enter New and Relapse diagnosed and registered
    </string>
    <string name="err_msg_new_relapse_tb_cases_started_on_treatment">
        Please enter New and Relapse cases started on treatment
    </string>
    <string name="err_msg_bacteriologically_tb_cases_registered">
        Please enter Bacteriologically TB cases registered
    </string>
    <string name="err_msg_bacteriologically_confirmed_tb_cases_with_genexpert">
        Please enter Bacteriologically TB cases tested with Genexpert
    </string>
    <string name="err_msg_no_of_tb_contacts_traced_and_screened">
        Please enter No. of TB contacts traced and screened
    </string>
    <string name="err_msg_samples_rejected">
        Please enter No. of samples rejected
    </string>
    <string name="err_msg_total_mtb_detected">
        Please enter Total MTB detected
    </string>
    <string name="err_msg_total_no_of_rif_r">
        Please enter Total No. of Rif R
    </string>
    <string name="err_msg_no_of_errors_invalid_results">
        Please enter Total No. of errors/invalid results
    </string>
    <string name="err_msg_no_of_genexpert_modules_working">
        Please enter GeneXpert modules working
    </string>
    <string name="err_msg_no_of_cartridges_remaining">
        Please enter No. of cartridges remaining
    </string>
    <string name="err_msg_adult_art_client_initiated_on_ipt">
        Please enter Adult ART clients initiated on IPT
    </string>
    <string name="err_msg_children_adolescents_art_clients_initiated_on_ipt">
        Please enter Children and adolescents on ART who started IPT
    </string>
    <string name="err_msg_apt_opd_total_label">Please enter OPD Total Attendance</string>
    <string name="err_msg_apt_emtct_expected_label">Please enter Expected eMTCT Mothers on appt</string>
    <string name="err_msg_apt_emtct_missed_label">Please enter eMTCT Missed appointments</string>
    <string name="err_msg_arv_nevirapine_label">Please enter Nevirapine Therapy</string>
    <string name="err_msg_arv_emtct_label">Please enter ARVs (Fixed - DC eMTCT)</string>
    <string name="err_msg_arv_hiv_screening_test_kits_label">Please enter HIV Screening Test Kits</string>

    <string name="err_msg_tra_measles_vaccine_label">Please enter Measles Vaccine</string>
    <string name="err_msg_tra_amoxcilline_label">Please enter Amoxcilline</string>
    <string name="err_msg_tra_depo_provera_label">Please enter Depo- Provera</string>
    <string name="err_msg_tra_iv_artesunate_label">Please enter IV artesunate</string>
    <string name="err_msg_tra_fansidar_label">Please enter Fansidar</string>
    <string name="err_msg_tra_ors_sackets_label">Please enter ORS (Sackets)</string>
    <string name="err_msg_tra_act_tablets_label">Please enter ACT (Tablets)</string>
    <string name="err_msg_tra_rdt_malaria_label">Please enter RDT (Malaria)</string>


    <string name="err_msg_mat_suspected_malaria_label">Please enter Suspected Malaria (Fever)</string>
    <string name="err_msg_mat_rdt_tested_label">Please enter RDT tested</string>
    <string name="err_msg_mat_rdt_positive_label">Please enter RDT Positive</string>
    <string name="err_msg_mat_microscopy_tested_label">Please enter Microscopy tested</string>
    <string name="err_msg_mat_microscopy_positive_label">Please enter Microscopy Positive</string>
    <string name="err_msg_mat_not_tested_treated_label">Please enter Not tested cases treated</string>
    <string name="err_msg_mat_rdt_neg_treated_label">Please enter RDT Negative Treated</string>
    <string name="err_msg_mat_rdt_pos_treated_label">Please enter RDT Positive Treated</string>
    <string name="err_msg_mat_microscopy_neg_treated_label">Please enter Microscopy negative treated</string>
    <string name="err_msg_mat_microscopy_pos_treated_label">Please enter Microscopy positive treated </string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Buttons string -->
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>

    <!--TextInputLayout strings for APT.-->
    <string name="opd_new">OPD New Attendees</string>
    <string name="ipt_eligible_adult_art">IPT eligible adult ART clients</string>
    <string name="samples_tested"> No. of Samples Tested</string>
    <string name="clients_screened"> No. of clients screened</string>
    <string name="presumptive_tb_cases_identified"> Presumptive TB cases identified</string>
    <string name="new_relapse_diagnosed_registered">
        New and Relapse diagnosed and registered
    </string>
    <string name="new_relapse_tb_cases_started_on_treatment">
        New and Relapse TB cases started on treatment
    </string>
    <string name="bacteriologically_tb_cases_registered">
        Bacteriologically TB cases registered
    </string>
    <string name="bacteriologically_confirmed_tb_cases_with_genexpert">
        Bacteriologically TB cases tested with Genexpert
    </string>
    <string name="no_of_tb_contacts_traced_and_screened">
        No. of TB contacts traced and screened
    </string>
    <string name="samples_rejected">No. of Samples Rejected</string>
    <string name="total_mtb_detected">Total MTB detected</string>
    <string name="total_no_of_rif_r">Total No. of Rif R</string>
    <string name="no_of_errors_invalid_results">No. of errors/invalid results</string>
    <string name="no_of_genexpert_modules_working">No. of GeneXpert modules working</string>
    <string name="no_of_cartridges_remaining">No. of cartridges remaining</string>
    <string name="ipt_eligible_children_adolescent_art">
        IPT eligible children/adolescent ART clients
    </string>
    <string name="adult_art_client_initiated_on_ipt">
        Adult ART clients initiated on IPT
    </string>
    <string name="children_adolescents_art_clients_initiated_on_ipt">
        Children and adolescents on ART who started IPT
    </string>
    <string name="opd_total">OPD Total Attendance</string>
    <string name="emtct_expected">Expected eMTCT Mothers on appt</string>
    <string name="emtct_missed">eMTCT Missed appointments</string>

    <!--TextInputLayout strings for ARV.-->
    <string name="hiv_screening_test_kits">HIV Screening Test Kits</string>
    <string name="emtct">ARVs (Fixed - DC eMTCT)</string>
    <string name="nevirapine">Nevirapine Therapy</string>


    <!--TextInputLayout strings for CASES. and DEATH.-->
    <string name="ma">Malaria (Total diagnosed)</string>
    <string name="dy">Dysentery</string>
    <string name="sa">Severe Acute Respiratory Infection (SARI)</string>
    <string name="af">Acute Flaccid Paralysis</string>
    <string name="ae">Adverse EVents Following Immunization (AEFI)</string>
    <string name="ab">Animal Bites (suspected rabies)</string>
    <string name="mg">Bacterial Meningitis</string>
    <string name="ch">Cholera</string>
    <string name="gw">Guinea Worm</string>
    <string name="me">Measles</string>
    <string name="nt">Neonatal tetanus</string>
    <string name="vf">Other Viral Hemorrhagic Fevers</string>
    <string name="pl">Plague</string>
    <string name="tf">Typhoid Fever</string>
    <string name="yf">Yellow Fever</string>
    <string name="tb">PresumptiveMulti Drug Resistance (MDR) TB</string>

    <!--TextInputLayout strings for IDSR CASES. and IDSR DEATH.-->
    <string name="cg">Chikungunya</string>
    <string name="dg">Dengue</string>
    <string name="il">Influenza-like illness</string>
    <string name="ax">Anthrax (human)</string>
    <string name="hp">Acute viral hepatitis</string>
    <string name="dc">Dracunculiasis</string>
    <string name="lp">Leprosy</string>
    <string name="oc">Onchocerciasis</string>
    <string name="bu">Buruli ulcer</string>
    <string name="gw1">Lymphatic Filariasis</string>
    <string name="no">Noma</string>
    <string name="hn">Human influenza due to a new subtype</string>
    <string name="ss">Severe Acute Respiratory Syndrome (SARS)</string>
    <string name="sp">Smallpox</string>
    <string name="dd">Diarrhoea with dehydration</string>
    <string name="pn">Severe pnuemonia</string>
    <string name="tx">Human African Trypanosomiasis</string>
    <string name="tr">Trachoma</string>
    <string name="sc">Schistosomiasis</string>
    <string name="dp">Diphteria</string>
    <string name="wc">Pertussis (Whooping cough)</string>
    <string name="bc">Brucellosis</string>
    <string name="ka">Kala azar</string>
    <string name="ns">Nodding Syndrome</string>
    <string name="ar">Adverse Drug Reactions (ADR)</string>

    <!--TextInputLayout strings for MAT.-->
    <string name="suspected_malaria">Suspected malaria (fever)</string>
    <string name="rdt_tested">RDT tested</string>
    <string name="rdt_positive">RDT Positive</string>
    <string name="microscopy_tested">Microscopy tested</string>
    <string name="microscopy_positive">Microscopy Positive</string>
    <string name="not_tested_treated">Not tested cases treated</string>
    <string name="rdt_neg_treated">RDT Negative treated</string>
    <string name="rdt_pos_treated">RDT Positive treated</string>
    <string name="microscopy_neg_treated">Microscopy Negative Treated</string>
    <string name="microscopy_pos_treated">Microscopy Positive Treated</string>


    <!--TextInputLayout strings for TRA.-->
    <string name="act_tablets">ACT (Tablets)</string>
    <string name="ors_sackets">ORS (Sackets)</string>
    <string name="measles_vaccine">Measles Vaccine</string>
    <string name="amoxcilline">Amoxcilline</string>
    <string name="depo_provera">Depo- Provera</string>
    <string name="iv_artesunate">IV artesunate</string>
    <string name="fansidar">Fansidar</string>
    <string name="rdt_malaria">RDT (Malaria)</string>

    <string name="EnterNumberHere">Enter Number Here</string>

    <string name="mTracApp">mTracApp</string>
    <string name="slogan">Information For Better Health</string>
    <string name="log">mTracApp Logo</string>

    <!--Strings for content_main.xml-->
    <string name="Cases">CASES.</string>
    <string name="Death">DEATH.</string>
    <string name="Apt">APT.</string>
    <string name="Mat">MAT.</string>
    <string name="Tra">TRA.</string>
    <string name="Arv">ARV.</string>
    <string name="Ipt">IPT.</string>
    <string name="Gp">GP.</string>
    <string name="Tb">TB.</string>

</resources>