<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eq62roket.mtracpro.Activities.CasesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:id="@+id/cases_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_ma_label"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/cases_ma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/ma"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="48dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_dy_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_dy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/dy"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="124dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_sa_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_sa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/sa"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="213dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_af_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_af"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/af"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="303dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_ae_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_ae"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/ae"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="48dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_ab_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_ab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/ab"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="124dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_mg_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_mg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/mg"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="213dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_ch_label"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/cases_ch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/ch"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="303dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_gw_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_gw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/gw"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="213dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_me_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/me"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="303dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_nt_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_nt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/nt"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="213dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_vf_label"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/cases_vf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/vf"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="303dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_pl_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_pl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/pl"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="213dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_tf_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_tf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/tf"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="303dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_yf_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_yf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/yf"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="213dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cases_tb_label"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/cases_tb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="22sp"
                    android:hint="@string/tb"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="303dp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:id="@+id/casesButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginBottom="25dp" />
        </LinearLayout>
    </ScrollView>

</ScrollView>
